Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31882

Qt 4.8.5 doesn't compile with VC11 (VS2012)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.x
    • 4.8.5
    • WebKit
    • None
    • Win64 / Win32 VC11
    • 1bed55097b22f2071af71ebefc9897816977fd14

      Qt 4.8.5 doesn't compile with vc11 on Win7. I get the following error in YarrJit.cpp / wtf/HashSet.h

      YarrJIT.cpp
      .\wtf/HashSet.h(180) : error C2664: 'std::pair<_Ty1,_Ty2>::pair(const std::pair<
      _Ty1,_Ty2> &)' : cannot convert parameter 1 from 'std::pair<_Ty1,_Ty2>' to 'cons
      t std::pair<_Ty1,_Ty2> &'
              with
              [
                  _Ty1=WTF::HashTableConstIteratorAdapter<WTF::HashTable<void *,void *
      ,WTF::IdentityExtractor<void *>,WTF::PtrHash<void *>,WTF::HashTraits<void *>,WTF
      ::HashTraits<void *>>,void *>,
                  _Ty2=bool
              ]
              and
              [
                  _Ty1=WTF::HashTableIterator<void *,void *,WTF::IdentityExtractor<voi
      d *>,WTF::PtrHash<void *>,WTF::HashTraits<void *>,WTF::HashTraits<void *>>,
                  _Ty2=bool
              ]
              and
              [
                  _Ty1=WTF::HashTableConstIteratorAdapter<WTF::HashTable<void *,void *
      ,WTF::IdentityExtractor<void *>,WTF::PtrHash<void *>,WTF::HashTraits<void *>,WTF
      ::HashTraits<void *>>,void *>,
                  _Ty2=bool
              ]
              Reason: cannot convert from 'std::pair<_Ty1,_Ty2>' to 'const std::pair<_
      Ty1,_Ty2>'
              with
              [
                  _Ty1=WTF::HashTableIterator<void *,void *,WTF::IdentityExtractor<voi
      d *>,WTF::PtrHash<void *>,WTF::HashTraits<void *>,WTF::HashTraits<void *>>,
                  _Ty2=bool
              ]
              and
              [
                  _Ty1=WTF::HashTableConstIteratorAdapter<WTF::HashTable<void *,void *
      ,WTF::IdentityExtractor<void *>,WTF::PtrHash<void *>,WTF::HashTraits<void *>,WTF
      ::HashTraits<void *>>,void *>,
                  _Ty2=bool
              ]
              No user-defined-conversion operator available that can perform this conv
      ersion, or the operator cannot be called
              .\wtf/HashSet.h(179) : while compiling class template member function 's
      td::pair<_Ty1,_Ty2> WTF::HashSet<ValueArg>::add(void *const &)'
              with
              [
                  _Ty1=WTF::HashTableConstIteratorAdapter<WTF::HashTable<void *,void *
      ,WTF::IdentityExtractor<void *>,WTF::PtrHash<void *>,WTF::HashTraits<void *>,WTF
      ::HashTraits<void *>>,void *>,
                  _Ty2=bool,
                  ValueArg=void *
              ]
              c:\users\heinz\qt\4.8.5\src\3rdparty\webkit\source\javascriptcore\heap\M
      arkStack.h(74) : see reference to function template instantiation 'std::pair<_Ty
      1,_Ty2> WTF::HashSet<ValueArg>::add(void *const &)' being compiled
              with
              [
                  _Ty1=WTF::HashTableConstIteratorAdapter<WTF::HashTable<void *,void *
      ,WTF::IdentityExtractor<void *>,WTF::PtrHash<void *>,WTF::HashTraits<void *>,WTF
      ::HashTraits<void *>>,void *>,
                  _Ty2=bool,
                  ValueArg=void *
              ]
              c:\users\heinz\qt\4.8.5\src\3rdparty\webkit\source\javascriptcore\heap\M
      arkStack.h(195) : see reference to class template instantiation 'WTF::HashSet<Va
      lueArg>' being compiled
              with
              [
                  ValueArg=void *
              ]
      Generating Code...
      NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 11.0
      \VC\BIN\cl.EXE"' : return code '0x2'
      Stop.
      

        For Gerrit Dashboard: QTBUG-31882
        # Subject Branch Project Status CR V

            jturcott Jocelyn Turcotte
            heinzbaumann Heinz Baumann
            Votes:
            5 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes