Fix compilation of QtWebKit with MSVC 2012/2013

For some reason, MSVC 2012/2013 is no longer able to infer the
need for both a call to a constructor and a cast of its parameter
so we have to give a hint for at least one of these two operations.

Task-number: QTBUG-31882
Change-Id: I42b54313ec4f6a83cde28326534c59b93ab3f615
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>